# nebula-gateway

./: .env.example  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  README.md  codecov.yml  docker-compose.dev.yml
.cargo/: audit.toml
.github/workflows/: bench.yml  ci.yml
.sqlx/: query-02d8c718515d4d3fb8155f321a28aaaa23ff978a08743b6ece5d00cf6482ef27.json  query-60fb3ac8c3a3719972ecb344eb300eef504df9d15ea4d27d147250afafda83c9.json  query-6727e28492a8aabfdfec827582808372beb722241af1620d1568eb4b19e97a0b.json  query-7583abc3f45ba30ddac294cd0f30bf1ff48d784633ae7678272d63566ee8c911.json  query-c18fc31fd6bf7c1820f1dca04ce12db70f8c4e98d0f843d2041f37be78b96c70.json  query-c8e7ae387e52624680ac2d7a28fcfb6765857cbd5f508b5b86d8898625475232.json  query-d13f105248d25eb150849431d87d05c37a477d7b5da423f17f3184718b9c07d0.json  query-e15e957d2684c92592fdfa8be5f7191dbe4e551d0aa6e74f6b66ffffc22dd880.json
benches/: gateway.rs
config/: default.toml  development.toml
migrations/: 202601210001_init.sql  202601260001_auth0_users.sql  202601310001_server_members.sql  202601310002_seed_default_server.sql  202602010001_messages.sql  202602020001_server_invites.sql  202602020002_channel_types.sql  20260203023542_DropChannelMemberTable.sql
src/: app.rs  auth0.rs  lib.rs  main.rs  protocol.rs  settings.rs  state.rs  types.rs
src/data/: channels.rs  invites.rs  messages.rs  mod.rs  servers.rs  users.rs
src/gateway/: handler.rs  mod.rs  ws.rs
src/rest/: auth.rs  channels.rs  health.rs  invites.rs  messages.rs  mod.rs  servers.rs
