[package]
name = "nebula"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[[bin]]
name = "nebula"
path = "src/main.rs"
test = false
bench = false

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
chrono = "0.4.43"
config = "0.15.19"
dashmap = "6.1.0"
reqwest = { version = "0.13.1", features = ["json"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
] }
futures-util = "0.3.31"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
ulid = { version = "1.2.1", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
tokio-tungstenite = "0.28.0"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6.5"

[lints.rust]
future-incompatible = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
redundant_clone = "deny"
needless_collect = "deny"
map_unwrap_or = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"

[[bench]]
name = "gateway"
harness = false
